--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
   body
     nav
       a(target='_blank', href='/')
-        img(src='/images/logo.png', alt='logo', width='100', height='100')
+        img(src='http://scriptus.gydja.com/wp-content/uploads/2014/04/totblsigil.jpg', alt='logo', width='100', height='100')
       ul
         li
           a(href='/') Home
