--- a/views/index.pug
+++ b/views/index.pug
@@ -42,3 +42,4 @@ block content
      for book in books
        p=book.title
        p=book.description
+       img(src=book.image, alt='thumbnail', width='200', height='300')
