--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
   body
     nav
       a(target='_blank', href='/')
-        img(src='http://scriptus.gydja.com/wp-content/uploads/2014/04/totblsigil.jpg', alt='logo', width='100', height='100')
+        img(src='http://ancientexplorers.com/wp-content/uploads/sites/6/2014/12/Depositphotos_41302969_l.jpg', alt='logo', width='100', height='100')
       ul
         li
           a(href='/') Home
