--- a/views/books/form.pug
+++ b/views/books/form.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .addBook
     form(method='post', action=`/books${ book ? '' : '/' + book.id}`)
-      div.textBox
+      div.textBox1
         input.inputAll(type='text', name='title', placeholder='Title', value=`${book.title || ''}`)
       div.textBox
         input.inputAll(type='text', name='author', placeholder='Author')
